[project]
name = "kukur"
version = "1.20.0"
description = "Kukur makes time series data and metadata available to the Apache Arrow ecosystem."
readme = "README.md"
licence = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
authors = [{ name = "Timeseer.AI", email = "pypi@timeseer.ai" }]
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=16.0.0",
    "python-dateutil>=2.8.1",
    "toml>=0.10.2",
    "pytz>=2021.1",
]

[project.urls]
Homepage = "https://kukur.timeseer.ai/"
Documentation = "https://kukur.timeseer.ai/"
Repository = "https://github.com/timeseer-ai/kukur"
Issues = "https://github.com/timeseer-ai/kukur/issues"

[project.optional-dependencies]
adodb = ["pywin32; sys_platform == 'win32'"]
cratedb = ["crate"]
datafusion = ["datafusion"]
delta = ["deltalake"]
influxdb = ["influxdb"]
kusto = ["azure-identity", "azure-kusto-data"]
odbc = ["pyodbc"]
numpy = ["numpy"]
piwebapi = ["requests", "requests-kerberos"]
postgresql = ["psycopg[binary]", "pg8000"]
redshift = ["redshift_connector"]

[dependency-groups]
windows = [
    "cx_Freeze==6.5.3; sys_platform == 'win32'",
    "cx-Logging==3.0; sys_platform == 'win32'",
]
dev = [
    "black >=24.4.0",
    "mypy >=1.9.0,< 2",
    "pytest >=8.1.1,< 9",
    "ruff >=0.8.3,< 0.9",
    "types-python-dateutil",
    "types-pytz",
    "types-PyYAML",
    "types-requests",
    "types-toml",
]

[project.scripts]
kukur = "kukur.cli:_run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kukur"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "C4",
    "D",
    "DTZ",
    "E",
    "F",
    "I",
    "N",
    "PD",
    "PL",
    "PLW",
    "Q",
    "RET",
    "T20",
]
ignore = ["C408", "D105", "D107", "D203", "D213", "RET504"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"kukur/__init__.py" = ["I001"]
"tests/**.py" = ["ARG001", "ARG002", "D", "PLR"]

[tool.pytest.ini_options]
markers = ["crate", "elasticsearch", "influxdb", "kukur", "odbc", "postgresql"]
